// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 kmVGEa flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <span />
  </span>
</div>
`;

exports[`Badge should render with icon 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 kmVGEa flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 cqJqXP flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 gcRebA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 kmVGEa flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 jnLqsD flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 iJGxmt flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 jeHfWe flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 dfKaAF flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-sc-1d7juq8-0 dVsRbn flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ fdfkzt"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;
